--- a/index.html
+++ b/index.html
@@ -4,36 +4,38 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Webcam Magnifier</title>
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    height: 100%;
-    background-color: black; /* Optional for contrast */
-  }
-  canvas {
-    display: block;
-  }
-  #toggleBtn {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 10;
-    font-size: 1.2em;
-    padding: 0.4em 0.8em;
-  }
-</style>
+<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/skeleton.css">
+<script src="js/script.js" defer></script>
+
+
 </head>
 <body>
-  <video id="video" autoplay playsinline style="display:none;"></video>
   
-  <button id="toggleBtn" style="position: absolute; top: 10px; left: 10px; z-index: 1;">
-  Toggle Magnifier
-</button>
+  
+  <!-- Control panel -->
+  <!-- div class="container" -->
+    <div>
+      <div class="column">
+        <button class="button" id="toggleBtn">Toggle Magnifier</button>
+        <button class="button" id="resizeBtn">Reload to Fit Screen</button>
 
-<canvas id="canvas"></canvas>
 
-  <script src="script.js"></script>
+        <label for="brightness">Brightness</label>
+        <input type="range" id="brightness" min="0.5" max="2" step="0.1" value="1">
+  
+        <label for="contrast">Contrast</label>
+        <input type="range" id="contrast" min="0.5" max="2" step="0.1" value="1">
+      </div>
+    
+    <!-- Video is hidden but feeds the canvas -->
+  <video id="video" autoplay playsinline style="display: none;"></video>
+
+  <!-- Canvas fills the screen -->
+  <canvas id="canvas"></canvas>
+  </div>
+  <!-- /div -->
+
 </body>
+
 </html>
