Updated CSS and index.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Webcam Magnifier</title>
 <link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/skeleton.css">
+ <link rel="stylesheet" href="css/skeleton.css">
 <script src="js/script.js" defer></script>
 
 
@@ -18,7 +18,7 @@
     <div>
       <div class="column">
         <button class="button" id="toggleBtn">Toggle Magnifier</button>
-        <button class="button" id="resizeBtn">Reload to Fit Screen</button>
+        <button class="button" id="resizeBtn">Reload to Fit Browser</button>
 
 
         <label for="brightness">Brightness</label>
