About message included.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 
 		<div>
 			<i>If the screen goes to sleep, wake it by clicking the mouse or pressing any key.</i>
-		</div>
+		  <a href="about.html" >
+    🧵 About This Project
+  </a>
+    </div>
 
 		<!-- Video is hidden but feeds the canvas -->
 		<video id="video" autoplay playsinline style="display: none;"></video>
