getUserMedia() updated for phone browser access, so that the camera will not be flipped.

--- a/about.html
+++ b/about.html
@@ -19,15 +19,15 @@
   </style>
 </head>
 <body>
-  <h1>🧵 Why I Built This Magnifier</h1>
+  <h1>Why I Built This Magnifier</h1>
   <p>
-    My vision is slowly changing, but my love for slow stitches, textures, and fabric detail hasn’t. I built this magnifier so I — and others — can continue crafting with clarity and comfort.
+    My vision is slowly changing, but my love for slow stitches, textures, and fabric detail hasn't. I built this magnifier so I — and others — can continue crafting with clarity and comfort.
   </p>
   <p>
-    It is a web-based magnifier instantly accessible to anyone with a browser and a webcam. Future versions will support desktop Linux and Windows as well.
+    It is a web-based magnifier instantly accessible to anyone with a browser and a webcam. Future versions will support desktop Linux and Windows, and can be used offline after download. 
   </p>
   <p>
-It is built using VSCode running on Debian Bulleye OS. Hardware used are Raspberry Pi 4B(8GB) with a Logitech HD 1080 webcam, and a DELL 27" USB-C monitor. But it can run on almost any system — salvaged home computers and monitors are *especially* good for our environment.  </p>
+It is built using VSCode running on Debian Bulleye OS. Hardware used are Raspberry Pi 4B(8GB) with a Logitech HD 1080 webcam, and a DELL 27" USB-C monitor. But it can run on almost any system — salvaged home computers and smaller monitors are *especially* good for this purpose and our environment.  </p>
   <p>
     <a href="index.html">← Back to the magnifier</a>
   </p>
